crates/oxc_css_parser/tests/error/at-rule/keyframes/declaration.snap
---
source: crates/oxc_css_parser/tests/error.rs
---
error: expect token `{`, but found `:`
  ┌─ declaration.css:2:8
  │
2 │   width: 100px;
  │        ^


